@@ -1,6 +1,7 @@
 Revision history for Net-Checkpoint-Management-v1: {{ $dist->version }}
 
 {{ $NEXT }}
+    - add access_roles methods
 
 0.001003  2019-07-09 15:48:51+02:00 Europe/Vienna
     - fix get methods required an unnecessary id
